Simulate variable error rate from downstream services